test(database): cover batch-load methods in database storage tests